[package]
name = "rustfer"
version = "0.1.0"
authors = ["Joe Hattori <joe2ninja21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7.2"
dyn-clone = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
serde_traitobject = "0.2.7"
oci-spec = "0.2.8"
libc = "0.2.91"
